--- a/tidytuesday-volcano-eruptions.Rmd
+++ b/tidytuesday-volcano-eruptions.Rmd
@@ -1,33 +1,51 @@
 ---
-title: "Untitled"
+title: "Tidytuesday - Volcano Eruptions"
 author: "Amri Rohman"
-date: "May 25, 2020"
-output: html_document
+date: "25/5/2020"
+output: 
+  html_document:
+      code_folding: hide
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
+knitr::opts_chunk$set(echo = TRUE,
+                      warning = FALSE,
+                      message = FALSE,
+                      fig.width=10,
+                      fig.height=3.5)
 
+options(scipen = 999,
+        digits = 2) 
+```
+![](https://images.unsplash.com/photo-1504344977555-430929e2c4ba?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)
+
+# About Dataset
+***
+
+The data this week comes from [The Smithsonian Institution](https://volcano.si.edu/).
+
+[Axios](https://www.axios.com/chart-every-volcano-that-erupted-since-krakatoa-467da621-41ba-4efc-99c6-34ff3cb27709.html) put together a lovely  plot of volcano eruptions since Krakatoa (after 1883) by elevation and type. 
+
+For more information about volcanoes check out the below Wikipedia article or specifically about VEI (Volcano Explosivity Index) see the Wikipedia article [here](https://en.wikipedia.org/wiki/Volcanic_Explosivity_Index). Lastly, [Google Earth](https://earth.google.com/web/@8.53508511,-2.91442364,-23163.5821626a,31750897.4603d,35y,0h,0t,0r/data=Ci4SLBIgZmU2MjU5Y2E0Y2FiMTFlODgxOGM3MTM3ODRlMDYzMjMiCGxheWVyc18w) has an interactive site on "10,000 Years of Volcanoes"!
+
+[More Information About Dataset.](https://github.com/rfordatascience/tidytuesday/blob/master/data/2020/2020-05-12/readme.md)
+
+# Loading Library and Data
+***
 
 ```{r}
 library(tidyverse)
 library(maps)
 library(knitr)
+library(skimr)
 
 eruptions_raw <- read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-05-12/eruptions.csv')
 volcano_raw <- read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-05-12/volcano.csv')
-
-eruptions_raw
-volcano_raw
 ```
+I used several packages to help me do this task. That is Tidyverse, maps, janitor, skimr and knitr.
 
-```{r}
-volcano_raw %>% glimpse()
-eruptions %>% glimpse()
-
-```
-
+# Data Preparation 
+***
 
 ```{r}
 eruptions <- eruptions_raw %>%
@@ -38,30 +56,102 @@ eruptions <- eruptions_raw %>%
                           vei >= 6 & vei <= 7 ~ 'very large'),
          start_date = paste(start_year, start_month, start_day, sep = "/") %>% as.Date(),
          end_date = paste(end_year, end_month, end_day, sep = "/") %>% as.Date(),
-         durations = end_date - start_date,
-         durations_days = as.numeric(durations)
-         ) %>% select(-eruption_number, -start_year, -start_month, -start_day,
-                      -end_year, -end_month, -end_day)
+         durations_days = as.numeric(end_date - start_date)
+         ) %>% 
+  select(-eruption_number, -start_year, -start_month, -start_day,
+         -end_year, -end_month, -end_day)
 
   
-glimpse(eruptions)
+volcano_eruptions <- inner_join(eruptions, volcano_raw, by=c("volcano_number", "volcano_name")) %>%
+  select(-c(area_of_activity, latitude.y, longitude.y, 
+            starts_with(c("major", "minor", "population")))) %>%
+  mutate(
+        primary_volcano_type = stringr::str_remove_all(primary_volcano_type, "[(s)]"),
+        primary_volcano_type = stringr::str_remove_all(primary_volcano_type, "[(es)]"),
+        primary_volcano_type = stringr::str_remove_all(primary_volcano_type, "[?]")) %>%
+  na.omit()
 
+volcano_eruptions %>%
+  select(1:5, country) %>%
+  head() %>%
+  kable()
 ```
 
+# Summary
+***
+### Numeric Variable
+
 ```{r}
+
+volcano_eruptions %>% 
+  skim() %>%
+  yank('numeric') %>% 
+  select(-p0, -p25, -p75, -p100) %>%
+  kable() 
+```
+
+Here, the volcano, number, longitude and latitude attributes can be ignored, because they don't mean anything.
+
+### Character Variable
+
+```{r}
+volcano_eruptions %>% 
+  skim() %>%
+  yank('character') %>% 
+  select(-whitespace, -empty) %>%
+  kable() 
+```
+
+In this dataset contain 316 volcano/mountain name spread across 48 countries with 5 level volcano explosion index (vei). 
+
+# Data Exploration
+***
+### How about volcano explosive index spreding?
+
+```{r fig.height=5}
 world <- map_data("world")
 
 ggplot() +
   geom_map(
     data = world, map = world,
     aes(long, lat, map_id = region),
-    color = "white", fill = "gray50", size = 0.05, alpha = 0.2
+    color = "white", fill = "gray20", size = 0.01, alpha = 0.1
   ) +
   geom_point(
-    data = eruptions %>% na.omit(vei),
-    aes(longitude, latitude, color = vei),
-    alpha = 0.8
-  ) + theme_void() +
-  theme(legend.position = 'bottom')
+    data = volcano_eruptions %>% na.omit(vei),
+    aes(longitude.x, latitude.x, color = vei),
+    alpha = 0.4
+    ) + 
+  theme_void() + 
+  #facet_wrap(~vei, ncol = 2) +
+  theme(legend.position = 'bottom') +
+  labs(caption = "by Amri Rohman\n @Tidytuesday")
 
 ```
+
+The spread of vei is relatively spread randomly across the world. But active mountains swarm around Southeast Asia (Indonesia and Philippines), East Asia (Japan, East of Russia), the east coast of the Americas and the Mediterranean continent.
+
+### What the name mountain which eruption mostly?
+
+```{r fig.height=5}
+volcano_eruptions %>% 
+  group_by(country) %>%
+  count(volcano_name) %>%
+  arrange(-n) %>%
+  head(25) %>%
+  ggplot(aes(x=reorder(paste(volcano_name, country, sep = " - "), n), 
+             y=n)) +
+  geom_bar(stat='identity', fill="steelblue") +
+  coord_flip() +
+  theme(legend.position = 'none') +
+  labs(x="Mountain Name",
+       y="Number of eruptions",
+       caption = "by Amri Rohman\n @Tidytuesday")
+```
+
+Mount Fournaise, Piton de la has eruptions 111 times, following by mount Etna in Italy has 104 times and Asosan in Japan 66 times.	
+
+# Thank You
+Amri Rohman. <br>
+Sidoarjo, East Java, ID
+
